[gd_scene load_steps=5 format=2]

[ext_resource path="res://Code/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Code/Enemies/Spiker/Spiker.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="CircleShape2D" id=2]

[node name="Spiker" instance=ExtResource( 1 )]
script = ExtResource( 2 )
id = "Spiker"
max_speed = 50.0
attack_range_close = 0.0

[node name="Shape" parent="." index="0"]
visible = false
shape = SubResource( 1 )

[node name="Shape" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="PostSpikeTimer" type="Timer" parent="." index="4"]
one_shot = true

[node name="SingleSpikeTimer" type="Timer" parent="." index="5"]
wait_time = 0.3
one_shot = true

[node name="SlamTimer" type="Timer" parent="." index="6"]
wait_time = 1.5
one_shot = true
